# defenseclaw

./: .dockerignore  .gitattributes  .gitignore  .goreleaser.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  MANIFEST.in  Makefile  NOTICE  PR_DESCRIPTION.md  PR_RECEIPT_SIGNER.md  README.md  go.mod  go.sum  pyproject.toml  setup.py  spec.md
.github/: pull_request_template.md
apps/tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
apps/tauri-app/src-tauri/icons/: icon.icns
apps/tauri-app/src-tauri/src/: main.rs
cli/tests/fixtures/mcp_launchers/python/: defenseclaw_mcp_launcher_fixture.py  pyproject.toml
docs/: AIMS_BEHAVIORAL_RESPONSE_PROTECTION.md  AIMS_CATALOG_EVIDENCE.md  AIMS_TASK_IDENTITY.md  AI_DISCOVERY_CONFIDENCE.md  API.md  ARCHITECTURE.md  C3_AGENT_TOKENOMICS_GALILEO.md  CLI.md  CONFIG_FILES.md  CONNECTOR-COMMIT-SUMMARY.md  CONNECTOR-MATRIX.md  CONNECTOR-REMAINING-FIXES.md  CONNECTORS.md  CONTRIBUTING.md  CREDENTIALS.md  DEFENSECLAW_DEMO.md  E2E.md  ENV-VARS.md  GALILEO_DEFENSECLAW_DATASETS.md  GUARDRAIL.md  GUARDRAIL_QUICKSTART.md  GUARDRAIL_RULE_PACKS.md  HOOK-CONNECTOR-CONTRACT.md  HOOKS.md  INSTALL.md  OBSERVABILITY-CONTRACT.md  OBSERVABILITY.md  OTEL-IMPLEMENTATION-STATUS.md  OTEL-LOG-TRACE-CONTEXT-GAP.md  OTEL.md  PR141-MATRIX-UPDATE.md  PROVIDERS.md  QUICKSTART.md  README.md  REGISTRIES.md  RELEASE_CHANNEL.md  RELEASE_VALIDATION.md  SANDBOX.md  SANDBOX_ARCHITECTURE.md  SANDBOX_DEBUGGING.md  (+14 more)
docs-site/: .gitattributes  .gitignore  README.md  STYLE.md  components.json  index.mdx  next.config.mjs  package-lock.json  package.json  production-readiness.mdx  source.config.ts  tsconfig.json
guardrails/: defenseclaw_guardrail.py
harness/dctest/: .env.example  COVERAGE.md  README.md  pyproject.toml
harness/dctest/docs/: matrix-recipes.md  per-pr-workflow.md  quickstart.md  troubleshooting.md
harness/dctest/scripts/: mark_expected_cli_registry.py
harness/dctest/src/dctest/: __init__.py  cli.py  config.py  exceptions.py  prompt_loader.py
harness/dctest/src/dctest/cases/cli/: agent.yaml  aibom.yaml  alerts.yaml  audit.yaml  codeguard.yaml  config.yaml  doctor.yaml  gateway-cli.yaml  guardrail.yaml  help.yaml  keys.yaml  mcp.yaml  migrations.yaml  plugin.yaml  policy.yaml  registry.yaml  settings.yaml  setup.yaml  skill.yaml  status.yaml  tool.yaml  version.yaml
harness/dctest/src/dctest/cases/connectors/: claudecode.yaml  codex.yaml  openclaw.yaml  optional.yaml
harness/dctest/src/dctest/cases/errors/: errors.yaml
harness/dctest/src/dctest/cases/gateway-api/: inspect.yaml  scan.yaml
harness/dctest/src/dctest/cases/lifecycle/: init.yaml  quickstart.yaml  sidecar.yaml  uninstall.yaml  upgrade.yaml  watcher.yaml
harness/dctest/src/dctest/cases/skills/: clawshield.yaml  codeguard.yaml  fail-mode.yaml  hitl.yaml  judge.yaml  observability.yaml  opa.yaml  sandbox.yaml
harness/dctest/src/dctest/cases/stories/: observe-claude-code.yaml
harness/dctest/src/dctest/fixtures/code/: benign-payload.json  seeded-payload.json
harness/dctest/src/dctest/fixtures/code/benign/: main.py
harness/dctest/src/dctest/fixtures/code/seeded/: main.py
harness/dctest/src/dctest/fixtures/config/: malformed.yaml
harness/dctest/src/dctest/fixtures/mcp/: sample-config.json
harness/dctest/src/dctest/fixtures/observability/: README.md  collector-config.yaml  docker-compose.yaml  grafana-admin-password.txt  prometheus.yml
harness/dctest/src/dctest/fixtures/ollama/: README.md
harness/dctest/src/dctest/fixtures/plugins/sample/: index.js  openclaw.plugin.json
harness/dctest/src/dctest/fixtures/policies/: malformed.rego
harness/dctest/src/dctest/fixtures/skills/benign/: SKILL.md
harness/dctest/src/dctest/fixtures/skills/cisco-trigger/: SKILL.md
harness/dctest/src/dctest/fixtures/skills/prompt-injection/: SKILL.md
harness/dctest/src/dctest/fixtures/vllm/: docker-compose.yaml
harness/dctest/src/dctest/fixtures/webhook-target/: webhook_target.py
harness/dctest/src/dctest/matrix/: connectors.yaml  fail_modes.yaml  profiles.yaml  providers.yaml  roles.yaml  scan_types.yaml
harness/dctest/src/dctest/models/: __init__.py  case.py  evidence.py  matrix.py  report.py  run.py
harness/dctest/src/dctest/prompt_assets/prompts/: preamble.agent.md
harness/dctest/src/dctest/prompt_assets/prompts/stages/: classify_evidence.md  connector_install.md  execute_case.md  generate_report.md  setup_provider.md  triage_failure.md
harness/dctest/src/dctest/services/: __init__.py  case_linter.py  case_loader.py  case_runner.py  cli_registry.py  cluster.py  connector_setup.py  doctor.py  executor.py  findings.py  followup_evidence.py  intake.py  matrix.py  provider_setup.py  report.py  run_store.py  score.py  snapshot.py  stage_runner.py
harness/dctest/tests/: conftest.py  test_case_loader.py  test_cli_smoke.py  test_executor.py  test_intake_and_store.py  test_matrix_expand.py  test_models_round_trip.py  test_report_assembly.py  test_snapshot.py
output-plugin/: CLAWHUB.md  README.md  openclaw.plugin.json  package.json  tsconfig.json
plugins/: registry_test.go
policies/: default.yaml  permissive.yaml  strict.yaml
release/: certification-policy.json  historical-artifact-digests.json  mandatory-axis-artifact-digests.json  mandatory-axis-artifact-digests.txt  mandatory-axis-manifest.json  mandatory-axis-sbom.json  source-install-identity.json  upgrade-baselines.json
requirements/: decision-log.md  unified-splunk-local-install-execution-plan.md  unified-splunk-local-install.md  work-log.md
schemas/: README.md  audit-event.json  axis-execution.schema.json  embed.go  embed_test.go  gateway-event-envelope.json  hook-audit-envelope.json  hook-connector-manifest.json  network-egress-event.json  registry-manifest.schema.json  signature.json
script/: build_and_run.sh  smoke_macos_app.sh
scripts/: assert-gateway-jsonl.py  assert-observability-v8-jsonl.py  benchmark_tui_refresh.py  build-macos-app-release.sh  build-macos-bundle.sh  build-managed-bundle.sh  build-windows-installer.ps1  bundle-sandbox-test.sh  check-macos-upstream.py  check_audit_actions.py  check_docs_cli_commands.py  (+95 more)
(+4061 files in other folders)
