[package]
name = "defenseclaw-tauri-app"
version = "0.1.0"
description = "DefenseClaw macOS App"
authors = ["DefenseClaw Team"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "z"
strip = true
